// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when MCP config has expired auth tokens > allows skipping when auth is expired > mcp-auth-skipped 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Ready to start?                                                      Todo (4/5)

 The wizard will:                                                     ● Check system
 ✔ add the Confidence SDK                                             ● Sign in to Confidence
 ✔ create your first feature flag                                     ● Set up your agent
                                                                      ● Connect tools
 ◆ The AI agent will be able to read and write files in your          ▶ Onboard project
 project.


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Start onboarding?

 ❯ Start onboarding
   Skip for now

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;

exports[`when MCP config has expired auth tokens > shows auth-expired status and reconnects successfully > connect-tools-expired 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Teach your AI Confidence                                             Todo (3/5)

 Give your AI assistant direct access to flags, docs, and             ● Check system
 integration tools via Confidence MCP. With it, you'll be able to:    ● Sign in to Confidence
                                                                      ● Set up your agent
 ● Ask your agent to create and manage feature flags.                 ▶ Connect tools
 ● Search docs and generate code, all from your IDE.                  ○ Onboard project
 ● Avoid context-switching or manual lookups. Your assistant has the
    keys.

 Confidence tools:
 ○ confidence-flags (auth expired)
 ○ confidence-docs (auth expired)


 Authentication expired — reconnect to refresh your credentials.


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Reconnect to refresh credentials?

 ❯ Reconnect all tools
   Reconnect confidence-flags
   Reconnect confidence-docs
   Skip for now

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;

exports[`when MCP config has expired auth tokens > shows auth-expired status and reconnects successfully > connect-tools-reconnected 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Teach your AI Confidence                                             Todo (4/5)

 Give your AI assistant direct access to flags, docs, and             ● Check system
 integration tools via Confidence MCP. With it, you'll be able to:    ● Sign in to Confidence
                                                                      ● Set up your agent
 ● Ask your agent to create and manage feature flags.                 ● Connect tools
 ● Search docs and generate code, all from your IDE.                  ○ Onboard project
 ● Avoid context-switching or manual lookups. Your assistant has the
    keys.

 Confidence tools:
 ✔ confidence-flags
 ✔ confidence-docs


 Connected successfully. Continuing..."
`;
